--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </div>
 <div>
 
-    Select an mp3 file: <input id="mp3file" type="file" accept="audio/*" />
-    
+    Select an mp3 file: <input id="audiofile" type="file" accept="audio/*" />
+    <audio id="audioplayer"/>
 
 </div>
 <p>I'm hosted with GitHub Pages.</p>
