--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </div>
 <div>
 
-    Select an mp3 file: <input id="audiofile" type="file" accept="audio/*" />
-    <audio id="audioplayer"/>
+<p>Select an mp3 file: </p><input id="audiofile" type="file" accept="audio/*" />
+    <audio id="audioplayer" />
 
 </div>
 <p>I'm hosted with GitHub Pages.</p>
