--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="/js/typeahead.jquery.min.js"></script>
         <!-- app's own JavaScript -->
         <script src="/js/scripts.js"></script>
+        <script src="http://tjcrowder.github.io/simple-snippets-console/snippet.js"></script>
         <title>Bass In Your Face</title>
   </head>
 <body>
