mp3player vis file

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   </head>
 <body>
 <h1>Bass In Your Face</h1>
-<div id="mp3player">
+<div id="audio_player">
   <div id="audiobox"></div>
   <canvas id="anal"></canvas>
 </div>
 <div>
 
-<p>Select an mp3 file: </p><input id="audiofile" type="file" accept="audio/*" />
-    <audio id="audioplayer" />
+<p>Select an mp3 file: </p><input id="audio_file" type="file" accept="audio/*" />
+    <audio id="audio_player" />
 
 </div>
 <p>I'm hosted with GitHub Pages.</p>
